--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,13 @@ services:
   - type: web
     name: dqn-carracing-portfolio
     env: python
+    plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
+    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app --timeout 120
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: FLASK_ENV
         value: production
+      - key: PORT
+        value: 10000
